--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -89,9 +89,9 @@ show_related = {docs = true, page = false, post = true, project = true, publicat
 
 # Enter contact details (optional). To hide a field, clear it to "".
 #If you are using the contact form for the email and you are using formspree replace email
-#witht he last bit of the formspree id. E.g. for https://formspree.io/x/alkdjf just the bit after .io/ so "x/alkdjf"
-email = "f/xpzojplq" #this is linked to the formspree account with the lab email address
-phone = ""
+#with the last bit of the formspree id. E.g. for https://formspree.io/x/alkdjf just the bit after .io/ so "x/alkdjf"
+email = "f/xoqrpgvq" #this is linked to the formspree account with the lab email address
+phone = "+91 7316603223"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
@@ -114,7 +114,7 @@ appointment_url = ""
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "github", icon_pack = "fab", name = "Github Contact", link = "https://github.com/MyersResearchGroup"}
+  {icon = "github", icon_pack = "fab", name = "Github Contact", link = "https://github.com/chandu8542"}
   #{icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
  # {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
  # {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
